Implementación de UserController y UserService: se agregaron controladores y servicios para gestionar usuarios y perfiles de solicitantes, junto con DTOs correspondientes. Se actualizó la configuración de seguridad y se ajustaron las propiedades de conexión a la base de datos.